Fixed text-centering This removes the text-align: center on the <body>, making it easier to change text alignment on individual parts of the site. This is not in a PR since it was an urgent fix.

--- a/css/index.css
+++ b/css/index.css
@@ -46,6 +46,7 @@
 	font-size: 40px;
 	position: absolute;
 	width: 100%;
+	text-align: center;
 	left: 0;
 	top: 40%;
 	text-shadow: 2px 2px rgba(0,0,0,0.5);
